하이퍼링크 add

--- a/FirstWeb/index.html
+++ b/FirstWeb/index.html
@@ -28,9 +28,14 @@
 
     <ol>
       <li>The Opening Tag</li>
-      <li value="8">The Closing Tag</li>
+      <li>The Closing Tag</li>
       <li>The Actual Element</li>
     </ol>
+
+    <a href="https://docs.microsoft.com/ko-kr/" target="_blank"
+      >Microsoft Docs</a
+    >
+    <h3>Why should you learn HTML?</h3>
 
     <ul>
       <!-- 순서가 없는 목록을 만드는 래핑 -->
